--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/",
-    "prepare": "husky"
+    "format": "prettier --check src/",
+    "prepare": "husky || true"
   },
   "dependencies": {
     "vue": "^3.4.15",
