--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --check src/",
+    "format": "prettier --write src/",
+    "commit": "lint-staged",
     "prepare": "husky || true"
   },
   "dependencies": {
@@ -34,11 +35,17 @@
     "eslint-plugin-vue": "^9.17.0",
     "husky": "^9.0.10",
     "jsdom": "^24.0.0",
+    "lint-staged": "^15.2.2",
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.0.3",
     "typescript": "~5.3.0",
     "vite": "^5.0.11",
     "vitest": "^1.2.2",
     "vue-tsc": "^1.8.27"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
