--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,5 @@
 {
-    "src/*.{js,jsx,json,ts,tsx,vue}": [
+    "src/**/*.{js,jsx,json,ts,tsx,vue}": [
         "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
         "prettier --write src/"
     ]
