--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prepare": "husky || true"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "vue": "^3.4.15",
     "vuetify": "^3.5.3"
   },
