--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "vue": "^3.4.15",
+    "vue-router": "^4.3.0",
     "vuetify": "^3.5.3"
   },
   "devDependencies": {
