--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "vite-plugin-vuetify": "^2.0.3",
     "vue": "^3.4.15",
     "vue-router": "^4.3.0",
     "vuetify": "^3.5.3"
