Generate test coverage

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,3 +47,4 @@ jobs:
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         slug: andres15alvarez/universitybank
+      run: npm run coverage
