--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,9 +42,11 @@ jobs:
     - name: Testing
       run: npm run test
 
+    - name: Generating test coverage
+      run: npm run coverage
+
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v4.0.1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         slug: andres15alvarez/universitybank
-      run: npm run coverage
