--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "axios": "^1.6.8",
+    "ts-case-convert": "^2.0.7",
     "vite-plugin-vuetify": "^2.0.3",
     "vue": "^3.4.15",
     "vue-router": "^4.3.0",
